# telegram_purchases

./: .env.example  .gitignore  Dockerfile  README.md  deploy.sh  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: deploy.yml
bot/: __main__.py  config.py  filters.py  keyboards.py  middlewares.py
bot/handlers/: categories.py  chart.py  delete.py  expense.py  export.py  report.py  start.py
data/: store_mappings.json
db/: migrations.py  repository.py  schema.sql
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
frontend/src/components/: BottomNav.tsx  CategoryDonut.tsx  DailyBarChart.tsx  PeriodSelector.tsx  SummaryCard.tsx  TransactionList.tsx  TrendLineChart.tsx  WeekdayHeatmap.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  History.tsx
services/: categorizer.py  chart_builder.py  exporter.py  parser.py  reporter.py
tests/: test_categorizer.py  test_parser.py
webapp/: auth.py  main.py
webapp/api/: analytics.py  categories.py  deps.py  expenses.py
