[project]
name = "telegram-purchase"
version = "0.1.0"
description = "Telegram bot for personal expense tracking"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.4,<4",
    "aiosqlite>=0.20",
    "pydantic-settings>=2.0",
    "matplotlib>=3.8",
    "plotly>=6.0",
    "kaleido>=1.0",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
include = ["bot*", "services*", "db*", "webapp*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
